pods/resource/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: express
    labels:
        app: express
spec:
    selector:
        matchLabels:
            app: express
    replicas: 1
    template:
        metadata:
            labels:
                app: express
        spec:
            containers:
                - name: express
                  image: express:1.0
                  imagePullPolicy: Never
                  ports:
                    - containerPort: 3000
