pods/resource/express-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: express
    labels:
        app: express
spec:
    ports:
    - port: 3000
      targetPort: 3000
    selector:
      app: express
